--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -31,7 +31,8 @@ a {
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.3); }
-
+ .mainLink + .mainLink {
+    margin-left: 1rem; }
 
 .btn {
   display: inline-block;
