--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -33,6 +33,24 @@ a {
   border-color: rgba(255, 255, 255, 0.3); }
  .mainLink + .mainLink {
     margin-left: 1rem; }
+@media screen and (min-width: 64em) {
+  .mainLink {
+    padding: 0.75rem 1rem; } }
+
+@media screen and (min-width: 42em) and (max-width: 64em) {
+  .mainLink {
+    padding: 0.6rem 0.9rem;
+    font-size: 0.9rem; } }
+
+@media screen and (max-width: 42em) {
+  .mainLink {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    font-size: 0.9rem; }
+    .mainLink + .mainLink {
+      margin-top: 1rem;
+      margin-left: 0; } }
 
 .btn {
   display: inline-block;
