--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,44 +15,8 @@ a {
   a:hover {
     text-decoration: underline; }
 
-.mainLink{
-  display: inline-block;
-  margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s; 
-}
-.mainLink :hover {
-  color: rgba(255, 255, 255, 0.8);
-  text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
- .mainLink + .mainLink {
-    margin-left: 1rem; }
-@media screen and (min-width: 64em) {
-  .mainLink {
-    padding: 0.75rem 1rem; } }
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .mainLink {
-    padding: 0.6rem 0.9rem;
-    font-size: 0.9rem; } }
-
-@media screen and (max-width: 42em) {
-  .mainLink {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    font-size: 0.9rem; }
-    .mainLink + .mainLink {
-      margin-top: 1rem;
-      margin-left: 0; } }
-
-.btn {
+.btn, .mainLink {
   display: inline-block;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, 0.7);
@@ -62,26 +26,26 @@ a {
   border-width: 1px;
   border-radius: 0.3rem;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-  .btn + .btn {
+  .btn,.mainLink + .btn,.mainLink {
     margin-left: 1rem; }
 
-.btn:hover {
+.btn,.mainLink:hover {
   color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.3); }
 
 @media screen and (min-width: 64em) {
-  .btn {
+  .btn,.mainLink {
     padding: 0.75rem 1rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
-  .btn {
+  .btn,.mainLink {
     padding: 0.6rem 0.9rem;
     font-size: 0.9rem; } }
 
 @media screen and (max-width: 42em) {
-  .btn {
+  .btn,.mainLink {
     display: block;
     width: 100%;
     padding: 0.75rem;
